# nodecalc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nodecalc.proto  notes.md
nodecalc/: CMakeLists.txt  main.cc  proto.cc  proto.h
